--- a/src/main/resources/SetNumberOfPlayers.fxml
+++ b/src/main/resources/SetNumberOfPlayers.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import java.lang.Integer?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.101" fx:controller="com.dcu.ie.prisoner.dilemma.view.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.101" fx:controller="com.dcu.ie.prisoner.dilemma.view.SceneManager">
     <columnConstraints>
         <ColumnConstraints/>
         <ColumnConstraints/>
