--- a/src/main/resources/LaunchGame.fxml
+++ b/src/main/resources/LaunchGame.fxml
@@ -1,37 +1,217 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import java.lang.Integer?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.101" fx:controller="com.dcu.ie.prisoner.dilemma.view.SceneManager">
-    <columnConstraints>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints/>
-    </rowConstraints>
-    <children>
-        <Label text="Players"/>
-        <ComboBox prefWidth="150.0" promptText="2" GridPane.columnIndex="2">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <Integer fx:value="2"/>
-                    <Integer fx:value="3"/>
-                    <Integer fx:value="4"/>
-                    <Integer fx:value="5"/>
-                    <Integer fx:value="6"/>
-                    <Integer fx:value="7"/>
-                    <Integer fx:value="8"/>
-                    <Integer fx:value="9"/>
-                    <Integer fx:value="10"/>
-                </FXCollections>
-            </items>
-        </ComboBox>
-    </children>
-</GridPane>
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dcu.ie.prisoner.dilemma.controller.GameController">
+    <top>
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <MenuBar GridPane.halignment="LEFT">
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="New Game" />
+                                <MenuItem mnemonicParsing="false" text="Close" />
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Settings">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="Switch to Computer Player" />
+                                <MenuItem mnemonicParsing="false" text="Change Player Strategies" />
+                                <MenuItem mnemonicParsing="false" text="Switch to Computer Player" />
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Help">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="About Iterated Prisoner's Dilemma" />
+                                <MenuItem mnemonicParsing="false" text="About Strategies" />
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
+                <MenuBar GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                    <menus>
+                        <Menu mnemonicParsing="false" text="Reset" />
+                        <Menu mnemonicParsing="false" text="Rounds">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="10" />
+                        <MenuItem mnemonicParsing="false" text="100" />
+                        <MenuItem mnemonicParsing="false" text="500" />
+                        <MenuItem mnemonicParsing="false" text="1000" />
+                     </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Run Simulation" />
+                    </menus>
+                </MenuBar>
+            </children>
+        </GridPane>
+
+    </top>
+    <center>
+      <BorderPane>
+         <center>
+              <GridPane alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity">
+                  <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0">
+                          <top>
+                              <Label alignment="CENTER" prefHeight="18.0" prefWidth="422.0" text="Human - Prisoner 1" BorderPane.alignment="CENTER">
+                                  <BorderPane.margin>
+                                      <Insets right="10.0" top="10.0" />
+                                  </BorderPane.margin>
+                              </Label>
+                          </top>
+                          <center>
+                              <GridPane id="player1GridPane" BorderPane.alignment="CENTER">
+                                  <columnConstraints>
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  </rowConstraints>
+                                  <children>
+                                      <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onMouseEntered="#addShadowEffect" style="-fx-background-color: linear-gradient(#00b200, #009900);" text="Cooperate" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                                          <padding>
+                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          </padding>
+                                          <GridPane.margin>
+                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          </GridPane.margin>
+                                          <effect>
+                                              <Glow />
+                                          </effect>
+                                          <font>
+                                              <Font name="System Bold" size="15.0" />
+                                          </font>
+                                      </Button>
+                                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseEntered="#addShadowEffect" onMouseExited="#removeShadowEffect" prefHeight="16.0" prefWidth="82.0" style="-fx-background-color: red;" text="Defect" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+                                          <font>
+                                              <Font name="System Bold" size="15.0" />
+                                          </font>
+                                          <GridPane.margin>
+                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          </GridPane.margin>
+                                          <padding>
+                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          </padding>
+                                          <effect>
+                                              <Glow />
+                                          </effect>
+                                      </Button>
+                                  </children>
+                              </GridPane>
+                          </center>
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                      </BorderPane>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                          <top>
+                              <Label alignment="CENTER" contentDisplay="TOP" prefHeight="18.0" prefWidth="422.0" text="Computer - Prisoner 2" BorderPane.alignment="CENTER">
+                                  <BorderPane.margin>
+                                      <Insets right="10.0" top="10.0" />
+                                  </BorderPane.margin>
+                              </Label>
+                          </top>
+                          <center>
+                              <GridPane BorderPane.alignment="CENTER">
+                                  <children>
+                                      <Label alignment="CENTER" prefHeight="22.0" prefWidth="80.0" text="Strategy" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                      <ComboBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="31.0" prefWidth="108.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                                  </children>
+                                  <columnConstraints>
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  </rowConstraints>
+                              </GridPane>
+                          </center>
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                      </BorderPane>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                     <center>
+                        <FlowPane id="Prisoner1HistoryPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                     </center>
+                      </BorderPane>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                      </BorderPane>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                     <center>
+                        <FlowPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                     </center>
+                      </BorderPane>
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                          <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                          </bottom>
+                      </BorderPane>
+                  </children>
+              </GridPane>
+         </center>
+         <top>
+            <GridPane BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                        <Label text="Results" GridPane.columnIndex="2" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="267.0" text="Actions History" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
+         </top>
+      </BorderPane>
+    </center>
+</BorderPane>
