--- a/src/main/resources/LaunchGame.fxml
+++ b/src/main/resources/LaunchGame.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.BorderPane?>
@@ -21,45 +22,56 @@
         <GridPane>
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <MenuBar GridPane.halignment="LEFT">
+            <GridPane GridPane.halignment="LEFT">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="581.0" minWidth="10.0" prefWidth="581.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="312.0" minWidth="10.0" prefWidth="119.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                      <MenuBar>
+                          <menus>
+                              <Menu mnemonicParsing="false" text="File">
+                                  <items>
+                                      <MenuItem mnemonicParsing="false" text="New Game" />
+                                      <MenuItem mnemonicParsing="false" text="Close" />
+                                  </items>
+                              </Menu>
+                              <Menu mnemonicParsing="false" text="Help">
+                                  <items>
+                                      <MenuItem mnemonicParsing="false" text="About Iterated Prisoner's Dilemma" />
+                                      <MenuItem mnemonicParsing="false" text="About Strategies" />
+                                  </items>
+                              </Menu>
+                          </menus>
+                      </MenuBar>
+                  <MenuBar GridPane.columnIndex="1">
                     <menus>
-                        <Menu mnemonicParsing="false" text="File">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="New Game" />
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Settings">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Switch to Computer Player" />
-                                <MenuItem mnemonicParsing="false" text="Change Player Strategies" />
-                                <MenuItem mnemonicParsing="false" text="Switch to Computer Player" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Help">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About Iterated Prisoner's Dilemma" />
-                                <MenuItem mnemonicParsing="false" text="About Strategies" />
-                            </items>
-                        </Menu>
+                      <Menu mnemonicParsing="false" text="-" />
+                      <Menu mnemonicParsing="false" text="Max" />
+                      <Menu mnemonicParsing="false" onAction="#closeWindow" text="X" />
                     </menus>
-                </MenuBar>
-                <MenuBar GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                  </MenuBar>
+               </children>
+            </GridPane>
+                <MenuBar GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                     <menus>
+                  <Menu mnemonicParsing="false" text="Switch Prisoner 1" />
                         <Menu mnemonicParsing="false" text="Reset" />
                         <Menu mnemonicParsing="false" text="Rounds">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="10" />
-                        <MenuItem mnemonicParsing="false" text="100" />
-                        <MenuItem mnemonicParsing="false" text="500" />
-                        <MenuItem mnemonicParsing="false" text="1000" />
+                        <RadioMenuItem mnemonicParsing="false" text="10" />
+                        <RadioMenuItem mnemonicParsing="false" text="100" />
+                        <RadioMenuItem mnemonicParsing="false" text="500" />
+                        <RadioMenuItem mnemonicParsing="false" text="1000" />
                      </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="Run Simulation" />
@@ -83,7 +95,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                   <children>
-                      <BorderPane prefHeight="200.0" prefWidth="200.0">
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(#D3D3D3, #C0C0C0);">
                           <top>
                               <Label alignment="CENTER" prefHeight="18.0" prefWidth="422.0" text="Human - Prisoner 1" BorderPane.alignment="CENTER">
                                   <BorderPane.margin>
@@ -138,7 +150,7 @@
                               <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
                           </bottom>
                       </BorderPane>
-                      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                      <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(#D3D3D3, #C0C0C0);" GridPane.rowIndex="1">
                           <top>
                               <Label alignment="CENTER" contentDisplay="TOP" prefHeight="18.0" prefWidth="422.0" text="Computer - Prisoner 2" BorderPane.alignment="CENTER">
                                   <BorderPane.margin>
@@ -207,7 +219,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                        <Label text="Results" GridPane.columnIndex="2" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="257.0" text="Results" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="267.0" text="Actions History" GridPane.columnIndex="1" />
                </children>
             </GridPane>
