--- a/src/main/resources/LaunchGame.fxml
+++ b/src/main/resources/LaunchGame.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <GridPane>
             <columnConstraints>
@@ -28,40 +28,6 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-            <GridPane GridPane.halignment="LEFT">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="581.0" minWidth="10.0" prefWidth="581.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="312.0" minWidth="10.0" prefWidth="119.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                      <MenuBar>
-                          <menus>
-                              <Menu mnemonicParsing="false" text="File">
-                                  <items>
-                                      <MenuItem mnemonicParsing="false" text="New Game" />
-                                      <MenuItem mnemonicParsing="false" text="Close" />
-                                  </items>
-                              </Menu>
-                              <Menu mnemonicParsing="false" text="Help">
-                                  <items>
-                                      <MenuItem mnemonicParsing="false" text="About Iterated Prisoner's Dilemma" />
-                                      <MenuItem mnemonicParsing="false" text="About Strategies" />
-                                  </items>
-                              </Menu>
-                          </menus>
-                      </MenuBar>
-                  <MenuBar GridPane.columnIndex="1">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="-" />
-                      <Menu mnemonicParsing="false" text="Max" />
-                      <Menu mnemonicParsing="false" onAction="#closeWindow" text="X" />
-                    </menus>
-                  </MenuBar>
-               </children>
-            </GridPane>
                 <MenuBar GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                     <menus>
                   <Menu mnemonicParsing="false" text="Switch Prisoner 1" />
@@ -75,6 +41,22 @@
                      </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="Run Simulation" />
+                    </menus>
+                </MenuBar>
+                <MenuBar>
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="New Game" />
+                                <MenuItem mnemonicParsing="false" onAction="#closeWindow" text="Close" />
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Help">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="About Iterated Prisoner's Dilemma" />
+                                <MenuItem mnemonicParsing="false" text="About Strategies" />
+                            </items>
+                        </Menu>
                     </menus>
                 </MenuBar>
             </children>
@@ -115,7 +97,7 @@
                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                   </rowConstraints>
                                   <children>
-                                      <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onMouseEntered="#addShadowEffect" style="-fx-background-color: linear-gradient(#00b200, #009900);" text="Cooperate" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                                      <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onMouseEntered="#addShadowEffect" onMouseExited="#removeShadowEffect" style="-fx-background-color: linear-gradient(#00b200, #009900);" text="Cooperate" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                                           <padding>
                                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                           </padding>
